--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,11 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <release>17</release>
-        </configuration>
+          <version>3.11.0</version>
+          <configuration>
+              <source>17</source>
+              <target>17</target>
+          </configuration>
       </plugin>
     </plugins>
     <resources>
@@ -24,13 +25,7 @@
     </resources>
   </build>
   	<dependencies>
-	    <dependency>
-	        <groupId>org.junit.jupiter</groupId>
-	        <artifactId>junit-jupiter-api</artifactId>
-	        <version>5.8.2</version> <!-- Replace with the latest version -->
-	        <scope>test</scope>
-	    </dependency>
-	
+
 	    <!-- JUnit Jupiter Engine (for running tests) -->
 	    <dependency>
 	        <groupId>org.junit.jupiter</groupId>
@@ -47,7 +42,7 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>6.9.10</version>
+            <version>7.7.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
